--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <title>دیجیاتو - زندگی با تکنولوژی</title>
     <link href="assets/img/download.png" type="image/png" rel="icon"/>
     <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
-    <link href="assets/css/fontawesome.min.css" type="text/css" rel="stylesheet"/>
+    <link href="assets/css/fontawesome-all.min.css" type="text/css" rel="stylesheet"/>
     <link href="assets/css/flexboxgrid.min.css" type="text/css" rel="stylesheet"/>
     <link href="assets/css/font.css" type="text/css" rel="stylesheet"/>
 </head>
@@ -13,19 +13,16 @@
     <header>
         <div class="menu">
             <div class="container">
+                <div class="row">
                 <ul>
                     <li>
                         <a href="#">
-                            <span>
                             DIGIATO
-                            </span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div class="a">
-                                تکنولوژی
-                            </div>
+                            تکنولوژی
                         </a>
                     </li>
                     <li>
@@ -73,7 +70,18 @@
                             تبلیغات
                         </a>
                     </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-user-circle" style="font-size: 25px;margin-top: 11px;"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-search" style="margin-top: 12px;font-size: 25px;"></i>
+                        </a>
+                    </li>
                 </ul>
+                </div>
             </div>
         </div>
     </header>
